# csv_deserializer

./: .gitignore  Cargo.toml  README.md
example/iris/: Cargo.toml
example/iris/src/: iris.rs  main.rs
src/: csv_types.rs  dataset_info.rs  dataset_metrics.rs  enum_gen.rs  lib.rs  main.rs  sanitizer.rs  struct_gen.rs  temp.rs
