[package]
name = "csv_deserializer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }

[workspace.dependencies]
csv_deserializer ={ path="../csv_deserializer"}
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
itertools = "0.14.0"
#serde = { version = "1.0.228", features = ["derive"] }

[workspace]
resolver = "2"
members = ["example/iris", "../csv_deserializer"]