[package]
name = "iris"
version = "0.1.0"
edition = "2024"
description = "A rust library to load a csv in a rusty typed way, all values are converted to the most appropriate enum"
readme = "README.md"
repository = "https://github.com/AliothCancer/csv_deserializer"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
keywords = ["csv", "deserialization", "gen-code", "rs-code"]

[dependencies]
csv_deserializer.workspace = true
csv.workspace = true